--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
-        <ul>
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link two</a></li>
-            <li><a href="">header link three</a></li>
-        </ul>
+        <div class="links width">
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>
+        <div class="banner width">
+            <div class="text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="this is a placeholder for an image">
+        </div>
     </div>
 
-    <div class="banner">
-        <div class="text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
-        </div>
-        <img src="" alt="this is a placeholder for an image">
-    </div>
+
 
     <div class="main">
         <h2>Some random information.</h2>
@@ -48,16 +54,18 @@
     </div>
 
     <div class="quote">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="author">-Thor, God of Thunder</p>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
     </div>
 
     <div class="sign-up">
-        <div class="text">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="container">
+            <div class="text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
         </div>
-        <button>Sign up</button>
     </div>
 
     <div class="footer">
