--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin - Landing Page</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,42 +11,48 @@
 </head>
 <body>
     <div class="header">
-        <div class="links width">
-            <div class="logo">Header Logo</div>
-            <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
-            </ul>
-        </div>
-        <div class="banner width">
-            <div class="text">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
+        <div class="nav-container">
+            <div class="nav">
+                <div class="logo">Header Logo</div>
+                <ul class="links">
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
             </div>
-            <img src="" alt="this is a placeholder for an image">
+        </div>
+        <div class="banner-container">
+            <div class="banner">
+                <div class="text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <img src="" alt="this is a placeholder for an image">
+            </div>
         </div>
     </div>
 
     <div class="main">
-        <h2>Some random information.</h2>
         <div class="container">
-            <div class="card">
-                <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="card">
-                <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="card">
-                <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="card">
-                <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
+            <h2>Some random information.</h2>
+            <div class="card-container">
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
         </div>
     </div>
